# qtree

./: .gitignore  README.md  setup.cfg
qtree/: QTree.py  main.py  naive_algorithm_vs_qtree.ipynb  plotCodes.py  qtreeAutoSelect.py  simulation.py  simulationplot.py  utils.py
qtree/data/danube/: data.pk
qtree/data/lower-colorado/: data.pk
qtree/data/lower-colorado150/: data.pk
qtree/data/middle-colorado/: data.pk
qtree/data/upper-colorado/: data.pk
