[metadata]

name = qtree
version = 0.0
url = https://github.com/princengoc/qtree
author = Ngoc Tran
author_email = tran.mai.ngoc@utexas.edu
classifiers =
    License :: OSI Approved
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering    
description = Implementation of the QTree algorithm as appeared in the paper "Causal discovery of a river from its extremes" by Tran, Buck and Kluppelberg
long_description = file: README.md
keywords = 
  qtree
  max-linear Bayesian network
  extreme value Bayesian network
long_description_content_type = text/markdown
license = GPLv3
license-file = COPYING
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
packages = qtree
#test_suite = tests
setup_requires =
    setuptools
install_requires =
    numpy
    pandas
    networkx
    pickle
    matplotlib
    seaborn

[bdist_wheel]
universal = true

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/


[options.package_data]
* = *.txt, *.pk

